--- a/css/style.css
+++ b/css/style.css
@@ -219,6 +219,7 @@ text-indent: -2em;
 	-webkit-flex-direction: column;
 	font-size: 20px;
 	margin-top: 10px;
+	flex-grow: 1;
 }
 
 #pages .skills {
