--- a/css/style.css
+++ b/css/style.css
@@ -229,9 +229,16 @@ text-indent: -2em;
 }
 
 #pages .skill {
+	display: flex;
+	display: -webkit-flex;
 	flex-grow: 1;
 	width: 50%;
 }
+
+.text, .stars, .mastery{
+	flex: 1 1 0
+}
+
 
 .skills .fa {
   margin-right: 7.5px;
