--- a/css/style.css
+++ b/css/style.css
@@ -178,12 +178,17 @@ section {
 
 .portfolio-title {
 	text-transform: uppercase;
-   font-size: 20px;
+   	font-size: 20px;
   	font-weight: 2;
   	color: #2d7788;
   	margin-top: 20px;
   	margin-bottom: 20px;
 	margin-left: 38px;
+}
+
+.portfolio-text{
+	margin-left: 38px;
+	margin-right: 38px;
 }
 
 #menu-picker {
