--- a/css/style.css
+++ b/css/style.css
@@ -10,6 +10,8 @@ body {
 	flex-direction: column;
 	-webkit-flex-direction: column;
 	font-family:"sans-serif";
+	text-align: justify;
+    text-justify: inter-word;
 	align-items: center;
 	-webkit-align-items: center;
 	margin: 0;
@@ -122,7 +124,6 @@ section {
 
 .experience-box {
 	margin: 20px auto;
-	text-align: left;
 }
 
 .section-title {
@@ -165,7 +166,6 @@ section {
 
 .education-box {
 	margin: 20px auto;
-	text-align: left;
 }
 
 .portfolio-container{
