--- a/css/style.css
+++ b/css/style.css
@@ -9,7 +9,7 @@ body {
 	display: -webkit-flex;
 	flex-direction: column;
 	-webkit-flex-direction: column;
-	font-family:"sans-serif";
+	font-family: "Open Sans", sans-serif;
 	text-align: justify;
     text-justify: inter-word;
 	align-items: center;
@@ -49,11 +49,13 @@ header {
 	font-weight: 100;
 	letter-spacing: 2px;
 	font-size: 40px;
+	font-family: "Roboto", sans-serif;
 }
 
 .name-container h4 {
 	font-weight: 500;
 	letter-spacing: 1px;
+	font-family: "Roboto", sans-serif;
 }
 
 .profile-container {
@@ -74,6 +76,7 @@ header {
 	font-size: 17px;
 	margin-top: 10px;
 	margin-right: 10px;
+	font-family: "Roboto", sans-serif;
 }
 
 .social-container a {
@@ -134,6 +137,7 @@ section {
   color: #2d7788;
   margin-top: 20px;
   margin-bottom: 20px;
+  font-family: "Roboto", sans-serif;
 }
 
 .item {
@@ -151,6 +155,7 @@ section {
   	margin-top: 0;
   	margin-bottom: 0;
   	font-weight: bold;
+  	font-family: "Roboto", sans-serif;
 }
 
 .time {
@@ -158,11 +163,13 @@ section {
   	right: 0;
   	top: 0;
   	color: #7a8aa0;
+  	font-family: "Roboto", sans-serif;
 }
 
 .company {
   margin-bottom: 10px;
   color: #7a8aa0;
+  font-family: "Roboto", sans-serif;
 }
 
 .education-box {
@@ -174,7 +181,6 @@ section {
 	display: -webkit-flex;
 	flex-direction: column;
 	-webkit-flex-direction: column;
-
 }
 
 .portfolio-title {
@@ -185,6 +191,7 @@ section {
   	margin-top: 20px;
   	margin-bottom: 20px;
 	margin-left: 38px;
+	font-family: "Roboto", sans-serif;
 }
 
 .portfolio-text{
@@ -207,6 +214,7 @@ section {
   	margin-top: 20px;
   	margin-bottom: 20px;
 	text-decoration: none;
+	font-family: "Roboto", sans-serif;
 }
 
 a:hover.menu-text {
@@ -244,18 +252,21 @@ p.reference {
   	margin-bottom: 0;
   	font-weight: bold;
   	margin-left: 38px;
+  	font-family: "Roboto", sans-serif;
 }
 
 .grant-company {
   margin-bottom: 10px;
   color: #7a8aa0;
   margin-left: 38px;
+  font-family: "Roboto", sans-serif;
 }
 
 .skills {
 	list-style-type: none;
 	display: flex;
 	flex-wrap: wrap;
+	text-align: left;
 }
 
 .skill {
