--- a/css/style.css
+++ b/css/style.css
@@ -17,6 +17,15 @@ body {
 	margin: 0;
 }
 
+body a {
+	color: black;
+	text-decoration: underline;
+}
+
+body a:hover {
+  	color: rgba(85,85,85,1);
+}
+
 .wrapper{
 	-webkit-box-shadow: 0px 2px 4px rgba(0, 0, 0, 0.2);
   	-moz-box-shadow: 0px 2px 4px rgba(0, 0, 0, 0.2);
@@ -55,6 +64,7 @@ header {
 .name-container h4 {
 	font-weight: 500;
 	letter-spacing: 1px;
+	font-size: 20px;
 	font-family: "Roboto", sans-serif;
 }
 
@@ -123,7 +133,6 @@ section {
 
 .summ-box {
 	padding: 20px;
-	text-align: center;
 }
 
 .experience-box {
